[package]
name = "rust-playgroud"
version = "0.1.0"
edition = "2021"

[[bin]]  # 明确声明这是一个二进制项目
name = "axum-redis-server"  # 这是你的二进制名称（可自定义）
path = "src/main.rs"

[dependencies]
algo = {path = "./algo"}
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
deadpool-redis = "0.11"  # 异步 Redis 连接池
redis = { version = "0.22", features = ["tokio-comp"] }  # 异步 Redis 驱动
reqwest = { version = "0.11", features = ["json"] }